force-app/main/default/objects/Opportunity.object
<CustomObject>
<fields>
    <fullName>Accept_Offer_Datetime__c</fullName>
    <label>Accept Offer Datetime</label>
    <type>DateTime</type>
</fields>
<fields>
    <fullName>Adjuster__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If adjuster doesn&apos;t show up in drop down. Send Natalie a chatter asking him to add it from this job.</inlineHelpText>
    <label>Insurance Adjuster</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Other</value>
        </filterItems>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Adjuster</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Account)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</fields>
</CustomObject>