force-app/main/default/objects/Opportunity/fields/Fuel__c.field-meta.xml
<CustomField>
    <fullName>Fuel__c</fullName>
    <label>Fuel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Benzin</fullName>
                <default>true</default>
                <label>Benzin</label>
            </value>
            <value>
                <fullName>Diesel</fullName>
            </value>
            <value>
                <fullName>Electro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>