force-app/main/default/objects/Opportunity/fields/Gear__c.field-meta.xml
<CustomField>
    <fullName>Gear__c</fullName>
    <label>Gear</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Automatik</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>