force-app/main/default/objects/Opportunity/recordTypes/Test_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>Test_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Test Process</businessProcess>
    <label>Test Opportunity</label>
</RecordType>