force-app/main/default/objects/Opportunity/validationRules/Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Name</fullName>
    <active>true</active>
    <errorConditionFormula>Name != NULL</errorConditionFormula>
    <errorMessage>ERROR</errorMessage>
</ValidationRule>